[project]
name = "nemoasr"
version = "0.1.0"
description = "Automatic speech recognition with speaker diarisation on small GPUs "

[tool.poetry]
packages = [{include = "nemoasr"}]

[tool.poetry.dependencies]
python = "^3.12"
nemo-toolkit = "^2.3"
pydub = "^0.25"

[tool.poetry.scripts]
nemoasr = "nemoasr.nemoasr:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
