[project]
name = "nemoasr"
version = "0.2.0"
description = "Automatic speech recognition with speaker diarisation on small GPUs "

[tool.poetry]
packages = [{include = "nemoasr"}]

[tool.poetry.dependencies]
python = "^3.12"
pydub = "^0.25"
nemo-toolkit = {version="^2.4", extras=["asr"]}

[tool.poetry.scripts]
nemoasr = "nemoasr.nemoasr:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
